# Teste

./: 404.html  README.md  index.html  pyproject.toml  requirements1.txt  search.html
docs/: mkdocs.yml
docs/docs/: git.md  index.md
git/: index.html
notebooks/: exemplo.ipynb
search/: search_index.json
