[project]
name = "pedro-pessoal"
version = "0.1.0"
description = ""
authors = [
    {name = "Pedro-AP",email = "ap.pedro.ds@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (==2.1.3)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "absl-py (>=2.1.0,<3.0.0)",
    "anyio (>=4.8.0,<5.0.0)",
    "argon2-cffi (>=23.1.0,<24.0.0)",
    "argon2-cffi-bindings (>=21.2.0,<22.0.0)",
    "asttokens (>=3.0.0,<4.0.0)",
    "astunparse (>=1.6.3,<2.0.0)",
    "atomicwrites (>=1.4.1,<2.0.0)",
    "attrs (>=25.1.0,<26.0.0)",
    "babel (>=2.17.0,<3.0.0)",
    "backcall (>=0.2.0,<0.3.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "bleach (>=6.2.0,<7.0.0)",
    "cachetools (>=5.5.2,<6.0.0)",
    "certifi (>=2025.1.31,<2026.0.0)",
    "cffi (>=1.17.1,<2.0.0)",
    "charset-normalizer (>=3.4.1,<4.0.0)",
    "cloudpickle (>=3.1.1,<4.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "colour (>=0.1.5,<0.2.0)",
    "cycler (>=0.12.1,<0.13.0)",
    "debugpy (>=1.8.13,<2.0.0)",
    "decorator (>=5.2.1,<6.0.0)",
    "defusedxml (>=0.7.1,<0.8.0)",
    "dtreeviz (>=2.2.2,<3.0.0)",
    "entrypoints (>=0.4,<0.5)",
    "et-xmlfile (>=2.0.0,<3.0.0)",
    "executing (>=2.2.0,<3.0.0)",
    "fastjsonschema (>=2.21.1,<3.0.0)",
    "flatbuffers (>=25.2.10,<26.0.0)",
    "fonttools (>=4.56.0,<5.0.0)",
    "future (>=1.0.0,<2.0.0)",
    "gast (>=0.6.0,<0.7.0)",
    "google-auth (>=2.38.0,<3.0.0)",
    "google-auth-oauthlib (>=1.2.1,<2.0.0)",
    "google-pasta (>=0.2.0,<0.3.0)",
    "graphviz (>=0.20.3,<0.21.0)",
    "grpcio (>=1.70.0,<2.0.0)",
    "h5py (>=3.13.0,<4.0.0)",
    "htmlmin (>=0.1.12,<0.2.0)",
    "hyperopt (>=0.2.7,<0.3.0)",
    "idna (>=3.10,<4.0)",
    "imagehash (>=4.3.2,<5.0.0)",
    "imbalanced-learn (>=0.13.0,<0.14.0)",
    "importlib-metadata (>=8.6.1,<9.0.0)",
    "importlib-resources (>=6.5.2,<7.0.0)",
    "iniconfig (>=2.0.0,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "ipympl (>=0.9.7,<0.10.0)",
    "ipython (>=9.0.1,<10.0.0)",
    "ipython-genutils (>=0.2.0,<0.3.0)",
    "ipywidgets (>=8.1.5,<9.0.0)",
    "jedi (>=0.19.2,<0.20.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "joblib (>=1.4.2,<2.0.0)",
    "json5 (>=0.10.0,<0.11.0)",
    "jsonschema (>=4.23.0,<5.0.0)",
    "jupyter-client (>=8.6.3,<9.0.0)",
    "jupyter-core (>=5.7.2,<6.0.0)",
    "jupyter-server (>=2.15.0,<3.0.0)",
    "jupyterlab (>=4.3.5,<5.0.0)",
    "jupyterlab-pygments (>=0.3.0,<0.4.0)",
    "jupyterlab-widgets (>=3.0.13,<4.0.0)",
    "jupyterlab-server (>=2.27.3,<3.0.0)",
    "keras-preprocessing (>=1.1.2,<2.0.0)",
    "kiwisolver (>=1.4.8,<2.0.0)",
    "llvmlite (>=0.44.0,<0.45.0)",
    "lxml (>=5.3.1,<6.0.0)",
    "markdown (>=3.7,<4.0)",
    "markupsafe (>=3.0.2,<4.0.0)",
    "missingno (>=0.5.2,<0.6.0)",
    "mistune (>=3.1.2,<4.0.0)",
    "multimethod (>=2.0,<3.0)",
    "nbclassic (>=1.2.0,<2.0.0)",
    "nbclient (>=0.10.2,<0.11.0)",
    "nbconvert (>=7.16.6,<8.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "nest-asyncio (>=1.6.0,<2.0.0)",
    "networkx (>=3.4.2,<4.0.0)",
    "notebook (>=7.3.2,<8.0.0)",
    "notebook-shim (>=0.2.4,<0.3.0)",
    "numba (>=0.61.0,<0.62.0)",
    "oauthlib (>=3.2.2,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "opt-einsum (>=3.4.0,<4.0.0)",
    "packaging (>=24.2,<25.0)",
    "pandocfilters (>=1.5.1,<2.0.0)",
    "parso (>=0.8.4,<0.9.0)",
    "patsy (>=1.0.1,<2.0.0)",
    "phik (>=0.12.4,<0.13.0)",
    "pickleshare (>=0.7.5,<0.8.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "pkgutil-resolve-name (>=1.3.10,<2.0.0)",
    "pluggy (>=1.5.0,<2.0.0)",
    "prometheus-client (>=0.21.1,<0.22.0)",
    "prompt-toolkit (>=3.0.50,<4.0.0)",
    "protobuf (>=6.30.0,<7.0.0)",
    "psutil (>=7.0.0,<8.0.0)",
    "pure-eval (>=0.2.3,<0.3.0)",
    "py (>=1.11.0,<2.0.0)",
    "pyasn1 (>=0.6.1,<0.7.0)",
    "pyasn1-modules (>=0.4.1,<0.5.0)",
    "pycparser (>=2.22,<3.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "pygments (>=2.19.1,<3.0.0)",
    "pyod (>=2.0.3,<3.0.0)",
    "pyparsing (>=3.2.1,<4.0.0)",
    "pyrsistent (>=0.20.0,<0.21.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "pytz (>=2025.1,<2026.0)",
    "pywavelets (>=1.8.0,<2.0.0)",
    "pywin32 (>=308,<309)",
    "pywinpty (>=2.0.15,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "pyzmq (>=26.2.1,<27.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "requests-oauthlib (>=2.0.0,<3.0.0)",
    "send2trash (>=1.8.3,<2.0.0)",
    "shap (>=0.47.0,<0.48.0)",
    "six (>=1.17.0,<2.0.0)",
    "slicer (>=0.0.8,<0.0.9)",
    "sniffio (>=1.3.1,<2.0.0)",
    "soupsieve (>=2.6,<3.0)",
    "stack-data (>=0.6.3,<0.7.0)",
    "sweetviz (>=2.3.1,<3.0.0)",
    "tangled-up-in-unicode (>=0.2.0,<0.3.0)",
    "tensorboard (>=2.19.0,<3.0.0)",
    "tensorboard-data-server (>=0.7.2,<0.8.0)",
    "tensorboard-plugin-wit (>=1.8.1,<2.0.0)",
    "tensorflow-estimator (>=2.15.0,<3.0.0)",
    "termcolor (>=2.5.0,<3.0.0)",
    "terminado (>=0.18.1,<0.19.0)",
    "threadpoolctl (>=3.5.0,<4.0.0)",
    "tinycss2 (>=1.4.0,<2.0.0)",
    "tomli (>=2.2.1,<3.0.0)",
    "tornado (>=6.4.2,<7.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "traitlets (>=5.14.3,<6.0.0)",
    "typeguard (>=4.4.2,<5.0.0)",
    "typing-extensions (>=4.12.2,<5.0.0)",
    "urllib3 (>=2.3.0,<3.0.0)",
    "visions (>=0.8.1,<0.9.0)",
    "wcwidth (>=0.2.13,<0.3.0)",
    "webencodings (>=0.5.1,<0.6.0)",
    "websocket-client (>=1.8.0,<2.0.0)",
    "werkzeug (>=3.1.3,<4.0.0)",
    "widgetsnbextension (>=4.0.13,<5.0.0)",
    "wrapt (>=1.17.2,<2.0.0)",
    "xlrd (>=2.0.1,<3.0.0)",
    "zipp (>=3.21.0,<4.0.0)",
    "mkdocs (>=1.6.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "pedro_pessoal", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
